# node-pty

./: .gitignore  Cargo.toml  README.md  Solution  build.rs  package.json
native/: Cargo.toml  index.d.ts  index.js  node-pty.linux-x64-gnu.node  node-pty.win32-x64-msvc.node  package.json
native/src/: lib.rs  unix.rs
native/src/unix/: mod.rs  pty.rs
native/src/win/: conpty.cc  conpty.rs  conpty_console_list.rs  mod.rs  pseudocon.rs  util.rs  winpty.rs
scripts/: build-if-needed.js
src/: conpty_console_list_agent.ts  eventEmitter2.test.ts  index.ts  lib.rs  ref.rs  terminal.test.ts  terminal.ts  unixTerminal.test.ts  unixTerminal.ts  windowsPtyAgent.test.ts  windowsPtyAgent.ts  windowsTerminal.test.ts  windowsTerminal.ts
src/unix/: pty.rs
src/win/: conpty.cc  conpty.rs  mod.rs
