[package]
name = "node-pty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.0.0-alpha.1"
napi-derive = "2.0.0-alpha.1"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1"
termios = "0.3.3"
libc = "0.2.106"
fcntl = "0.1.0"
errno = "0.2.8"


[build-dependencies]
napi-build = "1"