[package]
name = "node-pty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.0.2", features = ["async"]}
napi-derive = "2.0.2"
serde = "1.0.130"
#serde_json = "1.0.68"
serde_derive = "1"
nix = "0.23.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser", "winerror", "winbase", "winnt", "processthreadsapi"
] }
cty = "0.2.2"
widestring = "0.5.1"

[build-dependencies]
napi-build = "1.1.1"

[target.'cfg(windows)'.build-dependencies]
cc = "1.0.72"

[profile.release]
lto = true
