[package]
name = "node-pty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
napi = { version = "2.0.2", features = ["async"]}
napi-derive = "2.0.2"
serde = "1.0.130"
#serde_json = "1.0.68"
serde_derive = "1.0.127"
shared_library = "0.1.9"
nix = "0.23.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
    "winerror",
    "winbase",
    "winnt",
    "processthreadsapi",
    "errhandlingapi"
]}
cty = "0.2.2"
widestring = "0.5.1"

[dependencies.windows]
version = "0.35.0"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes"
]

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
