[package]
name = "node-pty"
version = "0.10.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
napi = { version = "2.2.0", features = ["async"]}
napi-derive = "2.2.0"
serde = "1.0.136"
serde_json = "1.0.79"
which = "4.2.5"
mimalloc = { version = "0.1.28" }

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.9", features = ["kernel"] }
winpty-sys = "0.5.0"

[target.'cfg(not(windows))'.dependencies]
nix = "0.23.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.35.0"
features = [
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_UI_Shell",
    "Win32_System_Environment"
]

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
